--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="userNameText">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/sp16</item>
         <item name="android:textStyle">bold</item>
     </style>
 
