--- a/presentation/src/main/res/layout/fragment_details.xml
+++ b/presentation/src/main/res/layout/fragment_details.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:count="@{`20000+`}"
-            app:isFollower="@{true}"
+            app:icon="@{@drawable/ic_follower}"
             app:layout_constraintEnd_toStartOf="@id/layoutFollowing"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardUser"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:count="@{`2000+`}"
-            app:isFollower="@{false}"
+            app:icon="@{@drawable/ic_following}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/layoutFollower"
             app:layout_constraintTop_toBottomOf="@id/cardUser"
