--- a/presentation/src/main/res/navigation/nav_main.xml
+++ b/presentation/src/main/res/navigation/nav_main.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.homanad.android.githubusers.ui.home.HomeFragment"
-        android:label="HomeFragment"
+        android:label="@string/label_github_users"
         tools:layout="@layout/fragment_home">
 
         <action
@@ -19,7 +19,7 @@
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.homanad.android.githubusers.ui.details.DetailsFragment"
-        android:label="DetailsFragment"
+        android:label="@string/label_users_details"
         tools:layout="@layout/fragment_details">
 
         <argument
