--- a/presentation/src/main/res/values/sizes.xml
+++ b/presentation/src/main/res/values/sizes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <dimen name="toolbarHeight">@dimen/dp48</dimen>
     <dimen name="recyclerItemSpacing">@dimen/dp8</dimen>
     <dimen name="recyclerVerticalSpacing">@dimen/dp16</dimen>
 </resources>
