--- a/presentation/src/main/res/layout/fragment_details.xml
+++ b/presentation/src/main/res/layout/fragment_details.xml
@@ -58,5 +58,12 @@
             app:layout_constraintTop_toBottomOf="@id/titleBlog"
             tools:text="Blog" />
 
+        <include
+            android:id="@+id/viewLoading"
+            layout="@layout/layout_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
