--- a/presentation/src/main/res/layout/item_user.xml
+++ b/presentation/src/main/res/layout/item_user.xml
@@ -44,10 +44,9 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txtHtmlUrl"
             style="@style/htmlText"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp12"
-            app:layout_constraintEnd_toEndOf="@id/txtUsername"
             app:layout_constraintStart_toStartOf="@id/txtUsername"
             app:layout_constraintTop_toBottomOf="@id/txtUsername"
             tools:text="https://www.dummy.com" />
