--- a/presentation/src/main/res/layout/item_user.xml
+++ b/presentation/src/main/res/layout/item_user.xml
@@ -1,56 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/userCardView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="isDetails"
+            type="Boolean" />
+
+        <variable
+            name="user"
+            type="com.homanad.android.githubusers.models.UserData" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        style="@style/userCardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dp24">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imgAvatar"
-            android:layout_width="@dimen/dp60"
-            android:layout_height="@dimen/dp60"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/circleImageView"
-            tools:srcCompat="@mipmap/ic_launcher" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp1"
-            android:background="@color/separatorLine"
-            app:layout_constraintBottom_toTopOf="@id/txtHtmlUrl"
-            app:layout_constraintEnd_toEndOf="@id/txtUsername"
-            app:layout_constraintStart_toStartOf="@id/txtUsername"
-            app:layout_constraintTop_toBottomOf="@id/txtUsername" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/txtUsername"
-            style="@style/userNameText"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imgAvatar"
-            app:layout_constraintTop_toTopOf="@id/imgAvatar"
-            tools:text="Dummy user" />
+            android:padding="@dimen/dp24">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/txtHtmlUrl"
-            style="@style/htmlText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp12"
-            app:layout_constraintStart_toStartOf="@id/txtUsername"
-            app:layout_constraintTop_toBottomOf="@id/txtUsername"
-            tools:text="https://www.dummy.com" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imgAvatar"
+                android:layout_width="@dimen/dp60"
+                android:layout_height="@dimen/dp60"
+                app:imageUrl="@{user.avatarUrl}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circleImageView"
+                tools:srcCompat="@mipmap/ic_launcher" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp1"
+                android:background="@color/separatorLine"
+                android:visibility="@{isDetails ? View.GONE : View.VISIBLE, default = visible}"
+                app:layout_constraintBottom_toTopOf="@id/txtHtmlUrl"
+                app:layout_constraintEnd_toEndOf="@id/txtUsername"
+                app:layout_constraintStart_toStartOf="@id/txtUsername"
+                app:layout_constraintTop_toBottomOf="@id/txtUsername" />
 
-</com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/txtUsername"
+                style="@style/userNameText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp16"
+                android:text="@{user.username}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imgAvatar"
+                app:layout_constraintTop_toTopOf="@id/imgAvatar"
+                tools:text="Dummy user" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/txtHtmlUrl"
+                style="@style/htmlText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp12"
+                android:text="@{user.githubUrl}"
+                android:visibility="@{isDetails ? View.GONE : View.VISIBLE, default = visible}"
+                app:layout_constraintStart_toStartOf="@id/txtUsername"
+                app:layout_constraintTop_toBottomOf="@id/txtUsername"
+                tools:text="https://www.dummy.com" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp8"
+                android:text="@{user.location}"
+                android:visibility="@{isDetails ? View.VISIBLE : View.GONE, default = gone}"
+                app:drawableStartCompat="@drawable/ic_location"
+                app:layout_constraintStart_toStartOf="@id/txtUsername"
+                app:layout_constraintTop_toBottomOf="@id/txtUsername" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</layout>
