--- a/presentation/src/main/res/layout/item_user.xml
+++ b/presentation/src/main/res/layout/item_user.xml
@@ -13,7 +13,11 @@
 
         <variable
             name="user"
-            type="com.homanad.android.githubusers.models.UserData" />
+            type="com.homanad.android.githubusers.models.UserItem" />
+
+        <variable
+            name="location"
+            type="String" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -76,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp8"
-                android:text="@{user.location}"
+                android:text="@{location}"
                 android:visibility="@{isDetails ? View.VISIBLE : View.GONE, default = gone}"
                 app:drawableStartCompat="@drawable/ic_location"
                 app:layout_constraintStart_toStartOf="@id/txtUsername"
