--- a/presentation/src/main/res/layout/item_user.xml
+++ b/presentation/src/main/res/layout/item_user.xml
@@ -21,7 +21,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
-        style="@style/userCardView"
+        style="@style/UserCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -38,7 +38,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearanceOverlay="@style/circleImageView"
+                app:shapeAppearanceOverlay="@style/CircleImageView"
                 tools:srcCompat="@mipmap/ic_launcher" />
 
             <View
