--- a/presentation/src/main/res/layout/fragment_details.xml
+++ b/presentation/src/main/res/layout/fragment_details.xml
@@ -54,6 +54,7 @@
             app:title="@{@string/following}" />
 
         <com.google.android.material.textview.MaterialTextView
+            style="@style/TitleText"
             android:id="@+id/titleBlog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,6 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp8"
+            android:text="@{userData.blogUrl}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleBlog"
             tools:text="Blog" />
