--- a/presentation/src/main/res/layout/layout_follow_count.xml
+++ b/presentation/src/main/res/layout/layout_follow_count.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -29,6 +30,7 @@
             android:layout_height="@dimen/dp40"
             android:scaleType="fitXY"
             android:src="@{icon}"
+            app:tint="@color/iconTintColor"
             tools:src="@drawable/ic_follower" />
 
         <com.google.android.material.textview.MaterialTextView
